# generix_ocr

./: OCRoutput.txt  README.md  aggregated_output.txt  pyproject.toml  test.md
outputs/: vision_model_outputs.txt
src/generix_ocr/: Test.py  main.py  minimal_test.py  test_pipeline.py
src/generix_ocr/crews/database_write_crew/config/: agents.yaml  tasks.yaml
src/generix_ocr/crews/etl_crew/: etl_crew.py
src/generix_ocr/crews/etl_crew/config/: agents.yaml  tasks.yaml
src/generix_ocr/crews/ocr_crew/: ocr_crew.py
src/generix_ocr/crews/ocr_crew/config/: agents.yaml  tasks.yaml
src/generix_ocr/models/: document_models.py
src/generix_ocr/pipelines/: pipeline.py
src/generix_ocr/tools/: __init__.py  custom_tool.py
