[tool.poetry]
name = "generix_ocr"
version = "0.1.0"
description = "generix_ocr using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.76.9,<1.0.0" }
asyncio = "*"
ollama = "^0.3.3"

[tool.poetry.scripts]
generix_ocr = "generix_ocr.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"